Collection API Improvement [#130761]